test/error/compile_exception_in_solution/identity/src/Identity.hx
package;

class Identity {
	static var e = throw "compile exception";

	public static function identity<T>(x:T):T {
		return x;
	}
}
